--- a/index.html
+++ b/index.html
@@ -64,26 +64,26 @@
 			<div class="slider_item"><img src="img/slider/respir.jpg" alt=""></div>
 		</div>
 	</div>
-	<div class="big_title">Выберете категорию товаров</div>
+	<div class="big_title"><span>Выберете категорию товаров</span></div>
   	<div class="content ">
   		<div class="tabs_container">
 			<div class="tabs">
 				<div class="__tab">
 					<div class="picture">
 						<div class="pic"><img src="img/products/mask.png" alt=""></div>
-						<div class="text">Маски для лица</div>
+						<div class="text"><span>Маски для лица</span></div>
 					</div>
 				</div>
-				<div class="__tab">
+				<div class="__tab __2">
 					<div class="picture">
 						<div class="pic"><img src="img/products/glove.png" alt=""></div>
-						<div class="text">Перчатки</div>
+						<div class="text"><span>Перчатки</span></div>
 					</div>
 				</div>
 				<div class="__tab">
 					<div class="picture">
 						<div class="pic"><img src="img/products/item_1.png" alt=""></div>
-						<div class="text">Спецодежда</div>
+						<div class="text"><span>Спецодежда</span></div>
 					</div>
 				</div>
 			</div>
