--- a/index.html
+++ b/index.html
@@ -986,13 +986,35 @@
 						<div class="price_of_prod">
 							<div></div>
 						</div>
-						<button class="send_button" type = 'submit'>Заказать</button>
+						<a href="#login_form_2" id="login_pop" class="form_btn_2"><span>Заказать</span></a>
 					</div>
 				</div>
 			</form>
 	    </div>
 	</div>
-
+	<a href="#x1" class="overlay" id="login_form_2"></a>
+	<div class="popup">
+	    <div class="popup_cont_2">
+	    	<form action="#" class="form_imput_2">
+				<div class="form_cont_2" id = "2">
+					<div class="input_item" id = 'dis'>
+						<input autocomplete="off" class = '_form' val = "1" type="text" name = "form[]" value = "" disabled>
+					</div>
+					<div class="input_item">
+						<input autocomplete="off" class = '_form' val = "2" type="text" name = "form[]" value = "Ваше имя">
+					</div>
+					<div class="input_item">
+						<input autocomplete="off" class = '_form' val = "3" type="text" name = "form[]" value = "Телефон">
+					</div>
+					<div class="input_item">
+						<input autocomplete="off" class = '_form' val = "4" type="text" name = "form[]" value = "Ваш E-mail">
+					</div>
+					<button class="send_button_2" type = 'submit'>Заказать</button>
+					
+				</div>
+			</form>
+	    </div>
+	</div>
 	
 	
 	<script src="scripts/scripts.js"></script>
