--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>  
 		<meta charset="UTF-8">
 
-		<meta name="viewport" content="width=device-width"/>
+		<meta name ="viewport" vontent="width = device-width, initial-scale = 1.0">
 
 
-		<title>Товар</title>
+		<title>Акции</title>
 		<script src="https://kit.fontawesome.com/441aecb93e.js" crossorigin="anonymous"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -79,6 +79,25 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="lic_cont">
+		<div class="lic_title">Наши сертефикаты</div>
+		<div class="conteiner">
+			<div class="lic_item"><img src="img/why_us/lic.png" alt=""></div>
+			<div class="lic_item"><img src="img/why_us/lic.png" alt=""></div>
+			<div class="lic_item"><img src="img/why_us/lic.png" alt=""></div>
+			<div class="lic_item"><img src="img/why_us/lic.png" alt=""></div>
+		</div>
+	</div>
+
+	<div class="map">
+		<div class="container">
+			<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4972fefa964c56677ce9e03460d4a7341aa2b4fc815039fef53f074f411a4493&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
+		</div>
+	</div>
+	
+
+
 
 
 
