--- a/index.html
+++ b/index.html
@@ -82,11 +82,17 @@
 
 	<div class="lic_cont">
 		<div class="lic_title">Наши сертефикаты</div>
-		<div class="conteiner">
+		<div class="conteiner" id = 'slider_sert'>
 			<div class="lic_item"><img src="img/why_us/lic.png" alt=""></div>
 			<div class="lic_item"><img src="img/why_us/lic.png" alt=""></div>
 			<div class="lic_item"><img src="img/why_us/lic.png" alt=""></div>
 			<div class="lic_item"><img src="img/why_us/lic.png" alt=""></div>
+			<div class="lic_item"><img src="img/why_us/lic.png" alt=""></div>
+			<div class="lic_item"><img src="img/why_us/lic.png" alt=""></div>
+		</div>
+		<div class="lic_controls">
+			<div class="prev_arrow"><i class="fas fa-chevron-right"></i></div>
+			<div class="next_arrow"><i class="fas fa-chevron-right"></i></div>
 		</div>
 	</div>
 
@@ -107,8 +113,8 @@
     <div class="container">
         
 	
-	<div class="big_title"><span>самые популярные предложения</span></div>
-  	<div class="content ">
+		<div class="big_title"><span>самые популярные предложения</span></div>
+	  	<div class="content ">
   		<div class="tabs_container">
 			<div class="tabs">
 				<div class="__tab">
