--- a/index.html
+++ b/index.html
@@ -982,13 +982,13 @@
 			<div class="next_arrow"><i class="fas fa-chevron-right"></i></div>
 		</div>
 	</div>
-
+	  </div><!--/container-->
 	<div class="map">
 		<div class="container">
 			<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4972fefa964c56677ce9e03460d4a7341aa2b4fc815039fef53f074f411a4493&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
 		</div>
 	</div>
-	
+ <div class="container">
     <footer class="footer ">
         <ul class="footer-menu-list clearfix">
           <li class="footer-menu-item">
@@ -1043,7 +1043,7 @@
         </div>
         
     </footer><!--/footer-->
-    </div><!--/container-->
+	</div>
 
 	<a href="#x" class="overlay" id="login_form"></a>
 	<div class="popup">
